--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,9 +115,9 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 0;
 }
 
-#header.header-scrolled, #header.header-inner-pages {
-  background: rgba(0, 0, 0, 0.5);
-}
+/* #header.header-scrolled, #header.header-inner-pages {
+  background: rgba(0, 0, 0, 0.3);
+} */
 
 #header .logo {
   align-content: center;
@@ -321,14 +321,14 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-bg.png") top center;
   background-size: cover;
   position: relative;
 }
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.5);
+  /* background: rgba(0, 0, 0, 0.3); */
   position: absolute;
   bottom: 0;
   top: 0;
@@ -347,7 +347,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 56px;
   font-weight: bolder;
   line-height: 64px;
-  color: #fff;
+  color: #f26228;
   font-family: "Calibri", sans-serif;
 }
 
@@ -356,7 +356,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h2 {
-  color: rgba(255, 255, 255, 0.9);
+  color: #434345;
   /* margin: 35px 0 0 0; */
   font-size: 24px;
 }
@@ -399,10 +399,10 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .footer-newsletter form {
   margin-top: 30px;
-  background: #fff;
-  padding: 6px 10px;
+  background: #f26228;
+  padding: 3px 3px;
   position: relative;
-  border-radius: 4px;
+  border-radius: 4PX;
 }
 
 #hero .footer-newsletter form input[type="email"] {
@@ -503,7 +503,7 @@ section {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #43aae1;
+  background: #f26228;
   margin: 4px 10px;
 }
 
@@ -541,7 +541,7 @@ section {
   font-size: 20px;
   left: 0;
   top: -3px;
-  color: #43aae1;
+  color: #f26228;
 }
 
 .about .content p:last-child {
@@ -591,7 +591,7 @@ section {
 }
 
 .clients .owl-dot.active {
-  background-color: #43aae1 !important;
+  background-color: #f26228 !important;
 }
 
 /*--------------------------------------------------------------
@@ -614,7 +614,7 @@ section {
 .features .icon-box i {
   font-size: 48px;
   float: left;
-  color: #43aae1;
+  color: #f26228;
 }
 
 .features .icon-box p {
@@ -645,7 +645,7 @@ section {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #43aae1;
+  background: #f26228;
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -672,7 +672,7 @@ section {
 }
 
 .services .icon-box h4 a:hover {
-  color: #43aae1;
+  color: #f26228;
 }
 
 .services .icon-box p {
@@ -722,7 +722,7 @@ section {
 
 .cta .cta-btn:hover {
   background: white;
-  border-color: #43aae1;
+  border-color: #f26228;
   color: #151515;
 }
 
@@ -756,7 +756,7 @@ section {
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #151515;
-  background: #43aae1;
+  background: #f26228;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -833,7 +833,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #43aae1;
+  color: #f26228;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -891,7 +891,7 @@ section {
   background: rgba(255, 255, 255, 0.8);
   display: inline-block;
   transition: ease-in-out 0.3s;
-  color: #43aae1;
+  color: #f26228;
 }
 
 .team .member .social a:hover {
@@ -1178,11 +1178,10 @@ section {
 }
 
 #footer .footer-top .footer-newsletter form {
-  margin-top: 30px;
-  background: #fff;
-  padding: 6px 10px;
+  background: #f26228;
+  padding: 3px 3px;
   position: relative;
-  border-radius: 4px;
+  border-radius: 4PX;
 }
 
 #footer .footer-top .footer-newsletter form input[type="email"] {
