--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -115,9 +116,9 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 0;
 }
 
-#header.header-scrolled, #header.header-inner-pages {
-  background: rgba(0, 0, 0, 0.5);
-}
+/* #header.header-scrolled, #header.header-inner-pages {
+  background: rgba(0, 0, 0, 0.3);
+} */
 
 #header .logo {
   align-content: center;
@@ -321,14 +322,14 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/landing1.png") top center;
   background-size: cover;
   position: relative;
 }
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.5);
+  /* background: rgba(0, 0, 0, 0.3); */
   position: absolute;
   bottom: 0;
   top: 0;
@@ -347,7 +348,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 56px;
   font-weight: bolder;
   line-height: 64px;
-  color: #fff;
+  color: #f26228;
   font-family: "Calibri", sans-serif;
 }
 
@@ -356,7 +357,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h2 {
-  color: rgba(255, 255, 255, 0.9);
+  color: #434345;
   /* margin: 35px 0 0 0; */
   font-size: 24px;
 }
@@ -399,16 +400,18 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .footer-newsletter form {
   margin-top: 30px;
-  background: #fff;
-  padding: 6px 10px;
+  background: #e5e5e5;
+  padding: 3px 3px;
   position: relative;
-  border-radius: 4px;
+  border-radius: 4PX;
 }
 
 #hero .footer-newsletter form input[type="email"] {
   border: 0;
   padding: 4px;
   width: calc(100% - 110px);
+  background: #e5e5e5;
+
 }
 
 #hero .footer-newsletter form input[type="submit"] {
@@ -462,15 +465,14 @@ font-size: 32px;
 
 @media (max-width: 768px) {
   #hero {
-    height: auto;
+    height: 80vh;
   }
   #hero h1 {
-    font-size: 28px;
+    font-size: 38px;
     line-height: 36px;
   }
   #hero h2 {
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 22px;
   }
 }
 
@@ -495,7 +497,6 @@ section {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #aaaaaa;
-  font-family: "Poppins", sans-serif;
 }
 
 .section-title h2::after {
@@ -503,7 +504,7 @@ section {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #43aae1;
+  background: #f26228;
   margin: 4px 10px;
 }
 
@@ -513,17 +514,21 @@ section {
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
   color: #151515;
 }
 
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-.about .content h3 {
-  font-weight: 700;
-  font-size: 28px;
-  font-family: "Poppins", sans-serif;
+.about .content h1 {
+  font-size: 56px;
+    font-weight: bolder;
+    line-height: 64px;
+    color: #f26228;
+}
+.about .content h2 {
+  color: #434345;
+  font-size: 24px;
 }
 
 .about .content ul {
@@ -541,94 +546,25 @@ section {
   font-size: 20px;
   left: 0;
   top: -3px;
-  color: #43aae1;
+  color: #f26228;
 }
 
 .about .content p:last-child {
   margin-bottom: 0;
 }
 
-/*--------------------------------------------------------------
-# Clients
---------------------------------------------------------------*/
-.clients {
-  padding-top: 20px;
+@media (max-width: 768px) {
+  #about h1 {
+    text-align: center;
+    font-size: 38px;
+    line-height: 36px;
+  }
+  #about h2 {
+    text-align: center;
+    font-size: 22px;    
+  }
 }
 
-.clients .owl-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 20px;
-}
-
-.clients .owl-item img {
-  width: 70%;
-  opacity: 0.5;
-  transition: 0.3s;
-  -webkit-filter: grayscale(100);
-  filter: grayscale(100);
-}
-
-.clients .owl-item img:hover {
-  -webkit-filter: none;
-  filter: none;
-  opacity: 1;
-}
-
-.clients .owl-nav, .clients .owl-dots {
-  margin-top: 5px;
-  text-align: center;
-}
-
-.clients .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd !important;
-}
-
-.clients .owl-dot.active {
-  background-color: #43aae1 !important;
-}
-
-/*--------------------------------------------------------------
-# Features
---------------------------------------------------------------*/
-.features {
-  padding-top: 20px;
-}
-
-.features .icon-box {
-  padding-left: 15px;
-}
-
-.features .icon-box h4 {
-  font-size: 20px;
-  font-weight: 700;
-  margin: 5px 0 10px 60px;
-}
-
-.features .icon-box i {
-  font-size: 48px;
-  float: left;
-  color: #43aae1;
-}
-
-.features .icon-box p {
-  font-size: 15px;
-  color: #848484;
-  margin-left: 60px;
-}
-
-.features .image {
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 400px;
-}
 
 /*--------------------------------------------------------------
 # Services
@@ -636,7 +572,7 @@ section {
 .services .icon-box {
   text-align: center;
   border: 1px solid #ebebeb;
-  padding: 80px 20px;
+  padding: 10px;
   transition: all ease-in-out 0.3s;
   background: #fff;
 }
@@ -645,7 +581,7 @@ section {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #43aae1;
+  background: #f26228;
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -672,7 +608,7 @@ section {
 }
 
 .services .icon-box h4 a:hover {
-  color: #43aae1;
+  color: #f26228;
 }
 
 .services .icon-box p {
@@ -687,251 +623,29 @@ section {
   transform: translateY(-10px);
 }
 
-/*--------------------------------------------------------------
-# Cta
---------------------------------------------------------------*/
-.cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/cta-bg.jpg") fixed center center;
-  background-size: cover;
-  padding: 60px 0;
+ h1 {
+  font-size: 56px;
+    font-weight: bolder;
+    line-height: 64px;
+    color: #f26228;
+}
+ h2 {
+  color: #434345;
+  font-size: 24px;
 }
 
-.cta h3 {
-  color: #fff;
-  font-size: 28px;
-  font-weight: 700;
+@media (max-width: 768px) {
+ h1 {
+    text-align: center;
+    font-size: 38px;
+    line-height: 36px;
+  }
+ h2 {
+    text-align: center;
+    font-size: 22px;    
+  }
 }
 
-.cta p {
-  color: #fff;
-}
-
-.cta .cta-btn {
-  font-family: "Raleway", sans-serif;
-  font-weight: 600;
-  font-size: 16px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 8px 28px;
-  border-radius: 4px;
-  transition: 0.5s;
-  margin-top: 10px;
-  border: 2px solid #fff;
-  color: #fff;
-}
-
-.cta .cta-btn:hover {
-  background: white;
-  border-color: #43aae1;
-  color: #151515;
-}
-
-/*--------------------------------------------------------------
-# Portfolio
---------------------------------------------------------------*/
-.portfolio .portfolio-item {
-  margin-bottom: 30px;
-}
-
-.portfolio #portfolio-flters {
-  padding: 0;
-  margin: 0 auto 20px auto;
-  list-style: none;
-  text-align: center;
-}
-
-.portfolio #portfolio-flters li {
-  cursor: pointer;
-  display: inline-block;
-  padding: 8px 15px 10px 15px;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 1;
-  text-transform: uppercase;
-  color: #444444;
-  margin-bottom: 5px;
-  transition: all 0.3s ease-in-out;
-  border-radius: 3px;
-}
-
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #151515;
-  background: #43aae1;
-}
-
-.portfolio #portfolio-flters li:last-child {
-  margin-right: 0;
-}
-
-.portfolio .portfolio-wrap {
-  transition: 0.3s;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  background: rgba(21, 21, 21, 0.6);
-}
-
-.portfolio .portfolio-wrap::before {
-  content: "";
-  background: rgba(21, 21, 21, 0.6);
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  transition: all ease-in-out 0.3s;
-  z-index: 2;
-  opacity: 0;
-}
-
-.portfolio .portfolio-wrap img {
-  transition: all ease-in-out 0.3s;
-}
-
-.portfolio .portfolio-wrap .portfolio-info {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 3;
-  transition: all ease-in-out 0.3s;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
-  padding: 20px;
-}
-
-.portfolio .portfolio-wrap .portfolio-info h4 {
-  font-size: 20px;
-  color: #fff;
-  font-weight: 600;
-}
-
-.portfolio .portfolio-wrap .portfolio-info p {
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 0;
-  margin: 0;
-  font-style: italic;
-}
-
-.portfolio .portfolio-wrap .portfolio-links {
-  text-align: center;
-  z-index: 4;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a {
-  color: #fff;
-  margin: 0 5px 0 0;
-  font-size: 28px;
-  display: inline-block;
-  transition: 0.3s;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #43aae1;
-}
-
-.portfolio .portfolio-wrap:hover::before {
-  opacity: 1;
-}
-
-.portfolio .portfolio-wrap:hover img {
-  transform: scale(1.2);
-}
-
-.portfolio .portfolio-wrap:hover .portfolio-info {
-  opacity: 1;
-}
-
-
-/*--------------------------------------------------------------
-# Team
---------------------------------------------------------------*/
-.team {
-  background: #fff;
-  padding: 60px 0;
-}
-
-.team .member {
-  margin-bottom: 20px;
-  overflow: hidden;
-  border-radius: 5px;
-  background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
-
-.team .member .member-img {
-  position: relative;
-  overflow: hidden;
-}
-
-.team .member .social {
-  position: absolute;
-  left: 0;
-  bottom: 30px;
-  right: 0;
-  opacity: 0;
-  transition: ease-in-out 0.3s;
-  text-align: center;
-}
-
-.team .member .social a {
-  transition: color 0.3s;
-  color: #151515;
-  margin: 0 3px;
-  padding-top: 7px;
-  border-radius: 4px;
-  width: 36px;
-  height: 36px;
-  background: rgba(255, 255, 255, 0.8);
-  display: inline-block;
-  transition: ease-in-out 0.3s;
-  color: #43aae1;
-}
-
-.team .member .social a:hover {
-  color: #fff;
-  background: #fff;
-}
-
-.team .member .social i {
-  font-size: 18px;
-}
-
-.team .member .member-info {
-  padding: 25px 15px;
-}
-
-.team .member .member-info h4 {
-  font-weight: 700;
-  margin-bottom: 5px;
-  font-size: 18px;
-  color: #151515;
-}
-
-.team .member .member-info span {
-  display: block;
-  font-size: 13px;
-  font-weight: 400;
-  color: #aaaaaa;
-}
-
-.team .member .member-info p {
-  font-style: italic;
-  font-size: 14px;
-  line-height: 26px;
-  color: #777777;
-}
-
-.team .member:hover .social {
-  opacity: 1;
-  bottom: 15px;
-}
 
 /*--------------------------------------------------------------
 # Breadcrumbs
@@ -1080,7 +794,8 @@ section {
 }
 
 #footer .footer-top {
-  background: #151515;
+
+  background: #f26228;
   border-bottom: 1px solid #222222;
   padding: 60px 0 30px 0;
 }
@@ -1106,7 +821,6 @@ section {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
   color: #fff;
 }
 
@@ -1178,17 +892,18 @@ section {
 }
 
 #footer .footer-top .footer-newsletter form {
-  margin-top: 30px;
-  background: #fff;
-  padding: 6px 10px;
+  background: #e5e5e5;
+  padding: 3px 3px;
   position: relative;
-  border-radius: 4px;
+  border-radius: 4PX;
 }
 
 #footer .footer-top .footer-newsletter form input[type="email"] {
   border: 0;
   padding: 4px;
   width: calc(100% - 110px);
+  background: #e5e5e5;
+
 }
 
 #footer .footer-top .footer-newsletter form input[type="submit"] {
