--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -465,6 +465,10 @@ font-size: 32px;
 }
 
 @media (max-width: 768px) {
+
+  #hero .container {
+    padding-bottom: 0px;
+  }
   #hero {
     height: auto;
   }
