--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,12 @@ body {
 }
 
 a {
+  font-size: 20px;
   color: #f26228;
 }
 
 a:hover {
-  color: #f26228 !important;
+  color: #ffffff !important;
   text-decoration: none;
 }
 
@@ -26,7 +27,7 @@ h1, h2, h3, h4, h5, h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  right: 15px;
+  right: 1px;
   bottom: 15px;
   z-index: 99999;
 }
@@ -40,13 +41,13 @@ h1, h2, h3, h4, h5, h6 {
   height: 40px;
   border-radius: 4px;
   background: 43aae1;
-  color: #151515;
+  color: #f26228;
   transition: all 0.4s;
 }
 
 .back-to-top i:hover {
   background: #151515;
-  color: #f26228;
+  color: #ffffff;
 }
 
 /*--------------------------------------------------------------
@@ -110,17 +111,16 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  /* background: rgba(0, 0, 0, 0.5); */
   transition: all 0.5s;
   z-index: 997;
   padding: 10px 0;
 }
 
-/* #header.header-scrolled, #header.header-inner-pages {
-  background: rgba(0, 0, 0, 0.3);
-} */
+#header.header-scrolled, #header.header-inner-pages {
+  background: #ffffff;
+}
 
-#header .logo {
+#header .logo { 
   align-content: center;
   margin: 0;
   padding: 0;
@@ -137,6 +137,19 @@ h1, h2, h3, h4, h5, h6 {
 #header .logo img {
   max-height: 5rem;
 }
+
+@media (max-width: 768px) {
+  .get-started-btn {
+    margin: 0 48px 0 0;
+    padding: 7px 20px 8px 20px;
+  }
+
+  #header .center {
+    text-align: center;
+    display: block !important;
+  }
+}
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -322,27 +335,12 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/landing1.png") top center;
-  background-size: cover;
-  position: relative;
-}
-
-#hero:before {
-  content: "";
-  /* background: rgba(0, 0, 0, 0.3); */
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-}
+ }
 
 #hero .container {
-  padding-bottom: 100px;
   position: relative;
-  /* padding-top: 74px; */
-  text-align: center;
-}
+  padding-top: 80px;
+} 
 
 #hero h1 {
   margin: 0;
@@ -350,7 +348,6 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bolder;
   line-height: 64px;
   color: #f26228;
-  font-family: "Calibri", sans-serif;
 }
 
 #hero h1 span {
@@ -359,45 +356,9 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h2 {
   color: #434345;
-  /* margin: 35px 0 0 0; */
   font-size: 24px;
 }
 
-#hero .icon-box {
-  padding: 30px 20px;
-  transition: ease-in-out 0.3s;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  height: 100%;
-  text-align: center;
-}
-
-#hero .icon-box i {
-  font-size: 32px;
-  line-height: 1;
-  color: #f26228;
-}
-
-#hero .icon-box h3 {
-  font-weight: 700;
-  margin: 10px 0 0 0;
-  padding: 0;
-  line-height: 1;
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#hero .icon-box h3 a {
-  color: #fff;
-  transition: ease-in-out 0.3s;
-}
-
-#hero .icon-box h3 a:hover {
-  color: #f26228;
-}
-
-#hero .icon-box:hover {
-  border-color: #f26228;
-}
 
 #hero .footer-newsletter form {
   margin-top: 30px;
@@ -410,7 +371,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .footer-newsletter form input[type="email"] {
   border: 0;
   padding: 4px;
-  width: calc(100% - 110px);
+  width: calc(100% - 5px);
   background: #e5e5e5;
 
 }
@@ -458,18 +419,9 @@ font-size: 32px;
   text-decoration: none;
 }
 
-@media (min-width: 1024px) {
-  #hero {
-    background-attachment: fixed;
-  }
-}
-
 @media (max-width: 768px) {
-
-  #hero .container {
-    padding-bottom: 0px;
-  }
   #hero {
+    padding-top: 50px;
     height: auto;
   }
   #hero h1 {
@@ -479,7 +431,23 @@ font-size: 32px;
   #hero h2 {
     font-size: 22px;
   }
+  .hero .hero-img img {
+    width: 100%;
+  }
 }
+
+@media (max-width: 991px) {
+  .hero  {
+    height: auto !important;
+  }
+  .hero .hero-img {
+    text-align: center;
+  }
+  .hero .hero-img img {
+    width: 80%;
+  }
+}
+
 
 /*--------------------------------------------------------------
 # Sections General
@@ -627,6 +595,11 @@ section {
   box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
   transform: translateY(-10px);
 }
+.orangeheaderh2 {
+  font-size: 36px;
+  font-weight: bolder;
+  line-height: 64px;
+}
 
  h1 {
   font-size: 56px;
@@ -649,8 +622,13 @@ section {
     text-align: center;
     font-size: 22px;    
   }
-}
 
+  .orangeheaderh2 {
+    font-size: 28px;
+    font-weight: bolder;
+    line-height: 64px;
+  }
+}
 
 /*--------------------------------------------------------------
 # Breadcrumbs
@@ -798,9 +776,19 @@ section {
   font-size: 14px;
 }
 
-#footer .footer-top {
+#footer .subscrib {
+  font-size: 20px;
+  color: #fff;
+}
 
-  background: #f26228;
+#footer .subscribenow {
+  color: #ffffff;
+  font-size: 26px;
+  line-height: 36px;
+}
+
+#footer .footer-top {
+  background: #434345;
   border-bottom: 1px solid #222222;
   padding: 60px 0 30px 0;
 }
@@ -809,99 +797,37 @@ section {
   margin-bottom: 30px;
 }
 
-#footer .footer-top .footer-info h3 {
-  font-size: 28px;
-  margin: 0 0 20px 0;
-  padding: 2px 0 2px 0;
-  line-height: 1;
-  font-weight: 700;
-  text-transform: uppercase;
-}
 
-#footer .footer-top .footer-info h3 span {
-  color: #f26228;
-}
 
-#footer .footer-top .footer-info p {
-  font-size: 14px;
-  line-height: 24px;
-  margin-bottom: 0;
-  color: #fff;
-}
-
-#footer .footer-top .social-links a {
+#footer .social-links a {
   font-size: 32px;
-  display: inline-block;
-  background: #f26228;
-  color: #fff;
-  line-height: 1;
-  padding: 2px 0;
-  margin-right: 4px;
-  border-radius: 4px;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-}
+    display: inline-block;
+    background: #f26228;
+    color: #fff;
+    line-height: 1;
+    padding: 2px 0;
+    margin-right: 4px;
+    border-radius: 4px;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s;
+  }
+  
+  #footer  .social-links a:hover {
+    color: #f26228 !important;
+    background: #fff;
+    color: #151515;
+    text-decoration: none;
+  }
 
-#footer .footer-top .social-links a:hover {
-  background: #fff;
-  color: #151515;
-  text-decoration: none;
-}
-
-#footer .footer-top h4 {
-  font-size: 16px;
-  font-weight: 600;
-  color: #fff;
-  position: relative;
-  padding-bottom: 12px;
-}
-
-#footer .footer-top .footer-links {
-  margin-bottom: 30px;
-}
-
-#footer .footer-top .footer-links ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-#footer .footer-top .footer-links ul i {
-  padding-right: 2px;
-  color: #f26228;
-  font-size: 18px;
-  line-height: 1;
-}
-
-#footer .footer-top .footer-links ul li {
-  padding: 10px 0;
-  display: flex;
-  align-items: center;
-}
-
-#footer .footer-top .footer-links ul li:first-child {
-  padding-top: 0;
-}
-
-#footer .footer-top .footer-links ul a {
-  color: #fff;
-  transition: 0.3s;
-  display: inline-block;
-  line-height: 1;
-}
-
-#footer .footer-top .footer-links ul a:hover {
-  color:#f26228;
-}
 
 #footer .footer-top .footer-newsletter form {
   background: #e5e5e5;
   padding: 3px 3px;
   position: relative;
   border-radius: 4PX;
-}
+} 
 
 #footer .footer-top .footer-newsletter form input[type="email"] {
   border: 0;
@@ -947,4 +873,10 @@ section {
 
 #footer .Patternme {
   color: #f26228;
+}
+
+@media (max-width: 991px) {
+  .footer .row {
+    text-align: center;
+  }
 }
