--- a/assets/css/privacy-policy-style.css
+++ b/assets/css/privacy-policy-style.css
@@ -68,7 +68,8 @@ h1 {
  .back-to-top {
     right: 5px;
     }
-
+  }
+  
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
