--- a/css/styles.css
+++ b/css/styles.css
@@ -4135,7 +4135,7 @@ textarea.form-control-lg {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
