--- a/css/styles.css
+++ b/css/styles.css
@@ -4149,7 +4149,7 @@ textarea.form-control-lg {
   display: flex;
   flex-wrap: inherit;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 .navbar-brand {
   padding-top: 0.3125rem;
