--- a/css/styles.css
+++ b/css/styles.css
@@ -4135,7 +4135,7 @@ textarea.form-control-lg {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
@@ -4149,11 +4149,11 @@ textarea.form-control-lg {
   display: flex;
   flex-wrap: inherit;
   align-items: center;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
 
-@media (min-width: 989px) {
-  .navbar > .container {
+@media (max-width: 989px) {
+  .navbar {
     justify-content: space-between;
 }
 
